cyclonedx-bom/src/specs/v1_6/snapshots/cyclonedx_bom__specs__v1_6__modelcard__test__it_should_write_xml_model_card.snap
---
source: cyclonedx-bom/src/specs/v1_6/modelcard.rs
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<modelCard bom-ref="modelcard-1">
  <modelParameters>
    <approach>
      <type>supervised</type>
    </approach>
    <task>Task</task>
    <architectureFamily>Architecture</architectureFamily>
    <modelArchitecture>Model</modelArchitecture>
    <datasets>
      <dataset bom-ref="dataset-1">
        <type>dataset</type>
        <name>Training Data</name>
        <contents>
          <url>https://example.com/path/to/dataset</url>
        </contents>
        <classification>public</classification>
        <governance>
          <owners>
            <owner>
              <contact bom-ref="contact-1">
                <name>Contact</name>
                <email>contact@example.com</email>
              </contact>
            </owner>
          </owners>
        </governance>
      </dataset>
    </datasets>
    <inputs>
      <input>
        <format>string</format>
      </input>
    </inputs>
    <outputs>
      <output>
        <format>image</format>
      </output>
    </outputs>
  </modelParameters>
  <quantitativeAnalysis>
    <performanceMetrics>
      <performanceMetric>
        <type>metric-1</type>
        <value>metric value</value>
        <confidenceInterval>
          <lowerBound>low</lowerBound>
          <upperBound>high</upperBound>
        </confidenceInterval>
      </performanceMetric>
    </performanceMetrics>
    <graphics>
      <description>Graphic Desc</description>
      <collection>
        <graphic>
          <name>Graphic A</name>
          <image>1234</image>
        </graphic>
      </collection>
    </graphics>
  </quantitativeAnalysis>
</modelCard>
